# nada-kafkarator

./: .gitignore  Dockerfile  README.md  hypercorn_config.py  nais.yaml  pyproject.toml  tasks.py  tox.ini
.github/workflows/: deploy.yml
doc/: README.md
doc/adr/: .outro.md  0004-combine-topic-creation-and-credentials-management-in-same-app.md  0006-kafkarator-api-is-focused-around-dedicated-crds.md  0008-user-experience-flow.puml  0008-user-experience.md  README.md
kafkarator/: main.py  models.py
tests/: test_kafkarator.py
