[tool.poetry]
name = "kafkarator"
version = "0.1.0"
description = ""
authors = ["Morten Lied Johansen <morten.lied.johansen@nav.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.49.0"
hypercorn = "^0.9.1"
prometheus-client = "^0.7.1"
starlette_exporter = "^0.1.0"
fiaas-logging = "^0.1.1"
k8s = "^0.15.0"

[tool.poetry.dev-dependencies]
tox = "^3"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-html = "^2.0.1"
pytest-sugar = "^0.9.2"
prospector = "^1.2.0"
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
